# thumbapp

./: package-lock.json  package.json
src/: index.html  styles.css  view.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/app/: app_proc.rs  mod.rs  models.rs  ops.rs
src/app/: dir_list.js  footer.js  header.js  index.js  thumb_app.js  thumbnail.js
src/app/css/: header.css  primer.css
src/app/libs/: AppConfig.js  SplitView.js  dc.js  history.js  vl.js  vlist.js
src/app/ui/: dir_list.js  footer.js  header.js  thumbnail.js
src/app/ui/compo/: drive_select_btn.js  favorite.js  open_folder_dialog.js  resize.js
src/app/ui/element/: base.js  button.js  dropdown.js
src/assets/app/: index.js
