[package]
name = "thumbApp"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tauri = { version = "1.5.2", features = [ "api-all", "devtools"] }
tauri-plugin-context-menu = "0.5.0"

tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"
mini-redis = "0.4.1"
dirs = "^5.0.1"
rayon = "1.8.0"
once_cell = "1.17.0"
rav1e = { version = "0.6.6", features = [] }
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
chrono = "0.4.31"
fern = "0.6.2"

disk_list = "^0.2.10"
sha2 = "0.10.8"
async_zip = { version = "0.0.15", features = ["full"] }

base64 = "0.21.5"
image = { version = "^0.24.7", features = ["avif", "webp", "webp-encoder", "gif", "jpeg", "png"] }
webp-animation = "0.9.0"
imageproc = "0.23.0"
gif = "0.12.0"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
